--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-
-    "start": "nodemon index.js" 
-
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,10 +18,12 @@
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "socket.io": "^4.7.2",
     "ws": "^8.13.0"
   }
 }
