--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   "license": "ISC",
   "dependencies": {
     "async-mutex": "^0.4.0",
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase-admin": "^12.3.0",
     "jsonwebtoken": "^9.0.1",
     "moment-timezone": "^0.5.43",
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "paralleldots": "^3.2.6",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
